--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "6.4.0",
     "@mui/material": "6.4.0",
     "@mui/x-data-grid": "^7.27.3",
@@ -22,9 +23,10 @@
     "dayjs": "^1.11.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.54.2",
+    "react-hook-form": "^7.58.0",
     "react-router": "7.1.3",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "9.17.0",
